--- a/src/pages/style.module.css
+++ b/src/pages/style.module.css
@@ -1,6 +1,14 @@
 .main {
-    display: flex;
-    flex-direction: column;
+    display: grid;
     width: 100%;
-    gap: 32px
+    gap: 32px;
+    grid-template-columns: 1fr 1fr;
+
+}
+
+
+@media (max-width: 768px) {
+    .main {
+        grid-template-columns: 1fr;
+    }
 }
